# simple-ssh-manager

./: Cargo.toml  README.md
assets/: cloud.sadeem.SimpleSshManager.desktop
src/: center.rs  login.rs  main.rs  store.rs  tray.rs
